# cmakeLearn

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  test_add.cc  test_sub.cc
include/: add.h  libsrc.h
src/: CMakeLists.txt  add.cc  sub.cc
src/libsrc/: CMakeLists.txt  libsrc.cc
